metadata/force-app/main/default/objects/CustomName_OHXZG__c/CustomName_OHXZG__c.object-meta.xml
<CustomObject>
    <description>Description_AJrwM</description>
    <label>CustomLabel_aVONB</label>
    <nameField>
        <label>CustomLabel_aVONB</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_aVONBs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>