metadata/force-app/main/default/objects/CustomName_OHXZG__c/fields/CustomField_bBePP__c.field-meta.xml
<CustomField>
    <fullName>CustomField_bBePP__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldDexNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>