metadata/force-app/main/default/objects/CustomName_OHXZG__c/fields/CustomField_GmkFy__c.field-meta.xml
<CustomField>
    <fullName>CustomField_GmkFy__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldMPCHQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>